<resources>
    <string name="app_name">Speedrun Browser</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="default_text">Default text</string>
    <string name="filter_by_platform">Filter by platform</string>
    <string name="favourites">Favourites</string>
    <string name="leaderboards_title">Leaderboards</string>
    <string name="games_title">All Games</string>
    <string name="categories_title">Categories</string>
    <string name="clear_all_filters">Clear all filters</string>
    <string name="action_favorite_game">Add game to favourites</string>
    <string name="run_title">Run</string>
    <string name="runner_label">Runner</string>
    <string name="runners_label">Runners</string>
    <string name="run_label">Time</string>
    <string name="comment_label">Comment</string>
    <string name="youtube_channel">Youtube</string>
    <string name="twitch_channel">Twitch</string>
    <string name="hitbox_channel">Hitbox</string>
    <string name="twitter_channel">Twitter</string>
    <string name="tap_here_to_view_video">Tap here to watch the run!</string>
    <string name="game">Game</string>
    <string name="leaderboard_position">Leaderboard position</string>
    <string name="something_went_wrong">Something went wrong :(</string>
    <string name="remove_game_from_favourites">Remove game from favourites</string>
    <string name="no_favourites_saved">You have no favourites saved!</string>
    <string name="resetting_list">Resetting game list</string>
    <string name="added_to_favourites">Added to favourites!</string>
    <string name="removed_from_favourites">Removed from favourites!</string>
    <string name="title_activity_example_compose">ExampleCompose</string>
</resources>
